--- a/sobre.html
+++ b/sobre.html
@@ -17,6 +17,62 @@
             </ul><h1 class="titulo">Sobre Nós </h1>
         </nav>
     </header>
-  <img src="" alt="">
+ <br><br><br><br><br> <p>HISTÓRICO DA ESCOLA
+ A Escola Estadual “Bárbara Heliodora” tem sua história originada na cidade
+ de Itabira - MG, criada pelo Decreto nº 8.245 de 18/02/1928 e, posteriormente, pelo
+ Decreto Lei nº 9.886 de 16 de março de 1931. Em 15 de abril de 1931, no governo
+ </p>
+
+ <p>
+ do estadista Olegário Maciel, foi transferida de Itabira e instalada em São Gonçalo
+ do Sapucaí, pequena cidade do interior de Minas Gerais. Terra e berço de ilustres
+ personagens da Inconfidência Mineira, dentre eles, Bárbara Heliodora que,
+ honrosamente, nomeia a nossa querida Escola.
+ Desde sua instalação até 1937, funcionou em prédio cedido pela Prefeitura
+ Municipal, onde está, atualmente, instalada a Santa Casa de Misericórdia. De 1937 a
+ 1944, funcionou em uma casa de propriedade do Dr. Olímpio Ribeiro da Luz, à rua
+ Dr. Lúcio de Mendonça. A seguir, passou para o sobrado do Barão do Rio Verde,
+ onde funcionou até 1958, quando foi, definitivamente, transferida para sua sede
+ atual.</p>
+<p> Muito bem instalada, a Escola Estadual “Bárbara Heliodora” é detentora de
+ um espaço físico privilegiado. Possui excelente estrutura com três pavimentos,
+ sendo o primeiro ocupado pela recepção, secretaria, salão nobre, cantina,
+ almoxarifado, pátio interno; no segundo pavimento, temos 11 salas de aula, salas
+ administrativas e pedagógicas, sala de recursos audiovisuais, laboratório de
+ informática, laboratório de ciências e biologia, biblioteca, sala dos professores,
+ sanitários para professores e alunos, outro pátio interno e jardim; no piso superior,
+ mais 4 salas de aula, sendo 1 delas destinada a Sala de Recursos. E ainda à
+ entrada, um amplo pátio usado para estacionamento, jardim e uma quadra
+ poliesportiva que embora tenha autorização de uso, ainda não foi inaugurada.
+ Embora tenha uma estrutura fantástica, nossa escola apresenta dificuldades
+ de acessibilidade aos portadores de necessidades educativas especiais. Dentro das
+ possibilidades a escola busca garantir a acessibilidade para os estudantes com
+ deficiências, Transtornos Globais do Desenvolvimento (TGD) e Altas
+ Habilidades/Superdotação, no entanto, como o prédio escolar é muito antigo e há
+ escassez de recursos para as devidas adaptações somos limitados na proficiência
+ deste atendimento. Para sanar estas dificuldades foi solicitado junto ao setor de
+ Engenharia da SRE um estudo para as devidas adaptações e, posteriormente,
+ pleitear recursos junto ao PDDE Acessibilidade que se encontra depositado em
+ conta específica.</p>
+ <p>Recentemente foi criado o Conselho de Representantes Estudantil e os
+ representantes de turma mantêm diálogo constante com a equipe gestora
+ colaborando com o planejamento de ações e cumprimento de metas estabelecidas </p>
+ 
+<p>
+ pela escola.
+ Os estudantes se sentem seguros no ambiente escolar interno, no entorno
+ deixa a desejar devido à proximidade com pontos de tráfico de drogas. Precisamos
+ investir na segurança e proteção evitando a depredação do patrimônio e possíveis
+ atos de violência.
+ A atual equipe gestora está comprometida em estreitar os laços entre escola
+ e família através de uma participação mais efetiva, com a realização de reuniões de
+ pais, atendimento individual do aluno, minimizando situações de conflito, auxiliado
+ pelos pais. Possuímos um Colegiado Escolar atuante e participativo. Atualmente
+ estabelecemos parcerias com os pais, nas comemorações, realização de projetos,
+ palestras, com o envolvimento da comunidade e seu entorno.
+ A nossa Escola está inserida na comunidade muito solidamente, por ser
+ referência em educação em nossa cidade durante muito tempo. Ao longo de 89
+ anos, sempre presente nas mais diversas ocasiões, promovendo eventos que
+ trazem benefícios à comunidade da nossa cidade e formando cidadãos que irão</p>
 </body>
 </html>
