--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
             </ul><h1 class="titulo">Sobre Nós </h1>
         </nav>
     </header>
- <br><br><br><br><br> <p>HISTÓRICO DA ESCOLA
+ <br><br><br><br><br> <h1>HISTÓRICO DA ESCOLA</h1><br> <p>
  A Escola Estadual “Bárbara Heliodora” tem sua história originada na cidade
  de Itabira - MG, criada pelo Decreto nº 8.245 de 18/02/1928 e, posteriormente, pelo
  Decreto Lei nº 9.886 de 16 de março de 1931. Em 15 de abril de 1931, no governo
